@@ -43,13 +43,13 @@ class eZDirTestInsideRoot extends ezpTestCase
 
     public function testRemoveWithoutCheck()
     {
-        $this->assertTrue( eZDir::recursiveDelete( $this->rootDir . 'a/b/c/' ) );
+        $this->assertTrue( eZDir::recursiveDelete( $this->rootDir . 'a/b/c/', false ) );
         $this->assertFalse( file_exists( $this->rootDir . 'a/b/c' ) );
     }
 
     public function testRemoveWithoutCheckNoTrailingSlash()
     {
-        $this->assertTrue( eZDir::recursiveDelete( $this->rootDir . 'a/b/c' ) );
+        $this->assertTrue( eZDir::recursiveDelete( $this->rootDir . 'a/b/c', false ) );
         $this->assertFalse( file_exists( $this->rootDir . 'a/b/c' ) );
     }
 
@@ -61,13 +61,13 @@ class eZDirTestInsideRoot extends ezpTestCase
 
     public function testRemoveRecursivelyWithoutCheck()
     {
-        $this->assertTrue( eZDir::recursiveDelete( $this->rootDir . 'a/' ) );
+        $this->assertTrue( eZDir::recursiveDelete( $this->rootDir . 'a/', false ) );
         $this->assertFalse( file_exists( $this->rootDir . 'a' ) );
     }
 
     public function testRemoveRecursivelyWithoutCheckNoTrailingSlash()
     {
-        $this->assertTrue( eZDir::recursiveDelete( $this->rootDir . 'a' ) );
+        $this->assertTrue( eZDir::recursiveDelete( $this->rootDir . 'a', false ) );
         $this->assertFalse( file_exists( $this->rootDir . 'a' ) );
     }
 
@@ -85,7 +85,7 @@ class eZDirTestInsideRoot extends ezpTestCase
 
     public function testRemoveWithoutCheckNotExisting()
     {
-        $this->assertFalse( eZDir::recursiveDelete( $this->rootDir . 'doesNotExist' ) );
+        $this->assertFalse( eZDir::recursiveDelete( $this->rootDir . 'doesNotExist', false ) );
     }
 
     public function testRemoveWithCheckNotExisting()
